--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,19 @@ spring:
   jpa:
     database: mysql
 
+  flyway:
+    baseline-on-migrate: true
+    table: schame_version
+#    locations: classpath:/db/migration
+#    baseline-description: "迁移完成"
+#    baseline-version: 1
+#    enabled: true
+    locations: classpath:db/migration/{vendor}
+    sql-migration-prefix: V
+    sql-migration-suffixes: .sql
+
+
+
 
 
 
