--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: test
   datasource:
-    url: jdbc:mysql://192.168.0.107:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
